# deen

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  lib.dn
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  compiler_frontend.md  enhancement.md  repo_issue.md  standard-library-issue.md
.github/workflows/: build.yml  docs.yml  test.yml
deen/: Cargo.toml  build.rs
deen-codegen/: Cargo.toml  build.rs
deen-codegen/src/: enumeration.rs  function.rs  lib.rs  macros.rs  scope.rs  structure.rs  variable.rs
deen-lexer/: Cargo.toml
deen-lexer/src/: error.rs  errors.rs  lib.rs  macros.rs  token.rs  token_type.rs  warnings.rs
deen-lexer/tests/: keywords.rs  numbers.rs  strings.rs  symbols.rs
deen-linker/: Cargo.toml
deen-linker/src/: compiler.rs  lib.rs  linker.rs
deen-parser/: Cargo.toml
deen-parser/src/: error.rs  expressions.rs  lib.rs  statements.rs  types.rs  value.rs
deen-parser/tests/: expressions.rs  statements.rs  values.rs
deen-preprocessor/: Cargo.toml
deen-preprocessor/minipre/: Cargo.toml
deen-preprocessor/minipre/src/: lib.rs
deen-preprocessor/src/: lib.rs
deen-semantic/: Cargo.toml
deen-semantic/src/: element.rs  error.rs  import.rs  lib.rs  macros.rs  scope.rs  symtable.rs
deen-semantic/src/macros/: cast.rs  format.rs  mod.rs  panic.rs  print.rs  println.rs  sizeof.rs
deen-semantic/tests/: tech.rs
deen/src/: cli.rs  main.rs
deen/tests/: TESTS_GUIDE.md  system_tests.rs
deen/tests/test_cases/: hello_world.dn  macros.dn  macros.expected  scopes.dn  scopes.expected
deen/tests/test_cases/basic/: annotation.dn  annotation.expected  assign.dn  assign.expected  binary_assign.dn  binary_assign.expected  constants.dn  constants.expected  constructions.dn  constructions.expected  operations.dn  operations.expected
deen/tests/test_cases/declarations/: enumerations.dn  enumerations.expected  functions.dn  functions.expected  structures.dn  structures.expected
deen/tests/test_cases/pointers/: advanced_pointers.dn  advanced_pointers.expected  basic_pointers.dn  basic_pointers.expected
stdlib/: bytes.dn  fs.dn  io.dn  math.dn  string.c  string.dn  vec.dn
