[workspace]
members = [
  "deen",
  "deen-lexer",
  "deen-parser",
  "deen-semantic",
  "deen-codegen",
  "deen-linker", "deen-preprocessor",
]
resolver = "2"

[workspace.package]
version = "1.1.3"
edition = "2024"
authors = ["mealet <workjason34@gmail.com>"]
description = "Compiler of Deen Programming Language"
repository = "https://github.com/mealet/deen"
license = "BSD-3-Clause"

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
