[package]
name = "deen-preprocessor"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
miette = { version = "7.6.0", features = ["fancy"] }
minipre = { path = "./minipre/" }
thiserror = "2.0.18"
