[package]
name = "deen-semantic"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
deen-parser = { path = "../deen-parser" }
deen-lexer = { path = "../deen-lexer" }
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.12"
indexmap = "2.9.0"
shellexpand = "3.1.1"
