[package]
name = "deen"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
deen-lexer = { path = "../deen-lexer" }
deen-parser = { path = "../deen-parser" }
deen-semantic = { path = "../deen-semantic" }
miette = { version = "7.5.0", features = ["fancy"] }
thiserror = "2.0.12"
